k8s/qbittorrent/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: qbittorrent
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: qbittorrent
          image: markusmcnugen/qbittorrentvpn
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: server2
              mountPath: /config
              subPath: qbittorrent
            - name: data
              mountPath: /downloads
              subPath: qbittorrent
      volumes:
        - name: server2
          persistentVolumeClaim:
            claimName: server2
        - name: data
          persistentVolumeClaim:
            claimName: data
