k8s/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  type: ClusterIP
  ports:
    - name: qbittorrent
      port: 8080
      targetPort: http
