k8s/qbittorrent/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("torrent.staging.mchill.duckdns.org")
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
